<resources>

    <string name="app_name">Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_button">sign in</string>
    <string name="signup_button">sign up</string>
    
    <string name="signup_password">password</string>
    <string name="signup_password_confirm">confirm</string>
    

</resources>